Fix badge cut off UI CSS (#1954)

--- a/packages/web3torrent/src/components/torrent-info/channels-list/ChannelsList.scss
+++ b/packages/web3torrent/src/components/torrent-info/channels-list/ChannelsList.scss
@@ -210,6 +210,6 @@ section.wires-list {
 }
 
 .MuiBadge-badge {
-  font-size: 0.65rem !important;
-  height: 13px !important;
+  font-size: 0.6rem !important;
+  height: 11.5px !important;
 }
